# Ds

./: .gitignore  .replit  =2.0.0  CLEANUP_GUIDE.md  DEPLOYMENT.md  README.md  check_comments.py  cleanup_repo.sh  db.sqlite3  delete_branches.py  merge_branches.py  merge_branches.sh  pyproject.toml  replit.nix  social_share_buttons.html  temp_notifications.html
.project_backup/discuss/: README.md  requirements.txt
.project_backup/templates/: base.html
backups/: README.md
core/: context_processors.py  forms.py  messaging_views.py  models.py  tests.py  urls.py  views.py  views.py.old
core/auth_views/: __init__.py  urls.py  views.py
core/templatetags/: __init__.py  core_tags.py  custom_filters.py  custom_postman_tags.py  dict_filters.py  dict_tags.py  form_tags.py  reputation_tags.py
core/views/: __init__.py  community_views.py  messaging_urls.py  messaging_views.py  notification_views.py  payment_views.py  post_views.py  profile_views.py  search_views.py  utils_views.py
discuss/: DEPLOYMENT_MAINTENANCE.txt  DEPLOYMENT_SERVER.txt  db.sqlite3  settings.py  temp_tag_section.html  urls.py
discuss-package/core/: __init__.py
discuss/core/: __init__.py  admin.py  filters.py  forms.py  models.py  search_adapters.py  urls.py  views.py
discuss/discuss/: settings.py  urls.py
discuss/user_guide/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
fresh_clone/core/: search_adapters.py  views.py
minimal_repo/: README.md  SETUP.md
temp_push/: filters.py
temp_repo/: README.md  pyproject.toml  requirements.txt  settings.py
temp_repo/core/: apps.py  (+1 more)
(+266 files in other folders)
